sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:16: error: Unmatched closing brace '}' ignored here
}
^